syntax = "proto3";

package disruption.api;

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

service DisruptionService {
  option (akkaserverless.codegen) = {
    value_entity: {
      name: "disruption.domain.Disruption"
      entity_type: "disruptions"
      state: "disruption.domain.DisruptionState"
    }
  };

  //TODO: dit is een update
  rpc Create(Disruption) returns (Disruption) {}

  rpc GetDisruption(GetDisruptionRequest) returns (Disruption) {}
}

message Disruption {
  string disruption_id = 1 [(akkaserverless.field).entity_key = true];
  string event_type = 2;
  string flight = 3;
}

message GetDisruptionRequest {
  string disruption_id = 1 [(akkaserverless.field).entity_key = true];
}
